<resources>
    <string name="app_name">GrapheGarconKnab</string>
    <string name="action_reset">Reinitialiser le graphe</string>
    <string name="action_ajouter">Ajouter un noeud</string>
    <string name="action_ajouter_arc">Ajouter un arc</string>
    <string name="action_sup_noeud">Supprimer un noeud</string>
    <string name="action_envoie">Envoyer par mail</string>
    <string name="entrer_mail">Entrer une adresse mail</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Retour</string>
    <string name="imgJpg">image/jpg</string>
    <string name="mail_subject">Graphe de l\'app GrapheGarconKnab</string>
    <string name="send_mail">Envoie du mail ...</string>
    <string name="not_app">Pas d\'application mail cliente installée.</string>
</resources>
