<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="garcon.maud.myapplication.MainActivity">

    <item
        android:id="@+id/action_ajouter"
        android:title="@string/action_ajouter"
        android:icon="@drawable/ic_add_circle_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ajouter_arc"
        android:orderInCategory="100"
        android:title="@string/action_ajouter_arc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sup_noeud"
        android:orderInCategory="100"
        android:title="@string/action_sup_noeud"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="1000"
        android:title="@string/action_reset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_envoie"
        android:orderInCategory="1000"
        android:title="@string/action_envoie"
        app:showAsAction="never"/>
</menu>
